# aton

./: CMakeLists.txt  README.md
code/: CMakeLists.txt
code/include/aton/: config.hpp  infra.hpp  range.hpp
code/include/aton/config/: move_member_functions.hpp  noexcept.hpp
code/include/aton/infra/: function_caller.hpp
code/include/aton/range/adaptors/: dereference.hpp  transform.hpp
code/include/aton/range/aton_/: range_adaptor_wrapper.hpp  range_holder.hpp
code/libraries/: CMakeLists.txt
code/libraries/config/: CMakeLists.txt
code/libraries/config/test/: CMakeLists.txt  smoke.cpp
code/libraries/infra/: CMakeLists.txt
code/libraries/range/: CMakeLists.txt
code/libraries/range/test/: CMakeLists.txt  smoke.cpp
code/libraries/range/test/adaptors/dereference/: smoke.cpp
code/libraries/range/test/adaptors/transform/: smoke.cpp
code/unit_tests/: CMakeLists.txt
